--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,6 @@ mod_version=0.0.1-1.20.1
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.milktoast.cookingmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=milktoast
+mod_authors=milktoast (programming), HeyItzJynx (art)
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
